--- a/LKWSpringerApp.Web/Views/Tour/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Index.cshtml
@@ -1,10 +1,16 @@
-﻿@model IEnumerable<LKWSpringerApp.Web.ViewModels.TourModels.AllTourModel>
+﻿@using LKWSpringerApp.Web.ViewModels.TourModels
+@model IEnumerable<AllTourModel>
 
 @{
     ViewData["Title"] = "All Tours";
 }
 
+
 <h2>All Tours</h2>
+
+<div class="mb-3">
+    <a asp-action="Add" class="btn btn-success">Add New Tour</a>
+</div>
 
 <table class="table table-striped">
     <thead>
@@ -28,7 +34,7 @@
                     }
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@tour.Id" class="btn btn-info">View Details</a>
+                    <a asp-action="Details" asp-route-id="@tour.Id" class="btn btn-primary">View Details</a>
                 </td>
             </tr>
         }
