--- a/LKWSpringerApp.Web/Views/Driver/Add.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Add.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Add a new driver</h2>
 
-<form asp-action="AddDriver" method="post">
+<form asp-action="Add" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="FirstName" class="control-label"></label>
