--- a/LKWSpringerApp.Web/Views/Driver/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Drivers</h2>
 
 <div class="mb-3">
-    <a asp-action="AddDriver" class="btn btn-success">Add New Driver</a>
+    <a asp-action="Add" class="btn btn-success">Add New Driver</a>
 </div>
 
 <div class="row">
