--- a/LKWSpringerApp.Web/Views/Client/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Details.cshtml
@@ -56,13 +56,15 @@
         {
             @foreach (var image in Model.Images)
             {
-                <div class="image-item m-2">
-                    <img src="@image.ImageUrl" alt="@image.Description" style="width: 100px; height: auto;" />
-                    <p>@image.Description</p>
-                    @if (!string.IsNullOrEmpty(image.VideoUrl))
-                    {
-                        <a href="@image.VideoUrl" target="_blank" class="btn btn-link">View Video</a>
-                    }
+                <div class="card m-2" style="width: 150px;">
+                    <img class="card-img-top" src="/@image.ImageUrl" alt="@image.Description" style="height: 100px; object-fit: cover;" />
+                    <div class="card-body p-2">
+                        <p class="card-text">@image.Description</p>
+                        @if (!string.IsNullOrEmpty(image.VideoUrl))
+                        {
+                            <a href="@image.VideoUrl" target="_blank" class="btn btn-link p-0">View Video</a>
+                        }
+                    </div>
                 </div>
             }
         }
