--- a/LKWSpringerApp.Web/Views/Home/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="welcome-text">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core" style="color: #000; text-decoration: underline;">building Web apps with ASP.NET Core</a>.</p>
+<div class="container mt-5">
+    <div class="row">
+        <!-- Left Sidebar with Buttons -->
+        <div class="col-md-3">
+            <div class="list-group">
+                <a asp-controller="Driver" asp-action="Index" class="btn btn-outline-warning list-group-item-action d-flex align-items-center my-2 py-3">
+                    <i class="fas fa-truck mr-2"></i> Drivers
+                </a>
+                <a asp-controller="Tour" asp-action="Index" class="btn btn-outline-warning list-group-item-action d-flex align-items-center my-2 py-3">
+                    <i class="fas fa-road mr-2"></i> Tours
+                </a>
+                <a asp-controller="Client" asp-action="Index" class="btn btn-outline-warning list-group-item-action d-flex align-items-center my-2 py-3">
+                    <i class="fas fa-user mr-2"></i> Clients
+                </a>
+            </div>
+        </div>
+
+        <!-- Center Area for Welcome Animation -->
+        <div class="col-md-9 d-flex justify-content-center align-items-center">
+            <h1 class="animated-welcome text-primary">Welcome to the LKW Springer App!</h1>
+        </div>
+    </div>
 </div>
