Adding a search bar and app responsivness

--- a/LKWSpringerApp.Web/Views/Client/Delete.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Delete.cshtml
@@ -5,8 +5,10 @@
     ViewData["Title"] = "Delete Client";
 }
 
+
+
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
-    <h2>@ViewData["Title"]</h2>
+    <h2><u>Delete Client</u></h2>
 </div>
 <hr />
 
