--- a/LKWSpringerApp.Web/Views/ClientImage/Delete.cshtml
+++ b/LKWSpringerApp.Web/Views/ClientImage/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LKWSpringerApp.Web.ViewModels.ClientImage.DeleteClientImageModel
 
-<h2>Delete Client Media</h2>
+<h2><u>Delete client media file</u></h2>
 <p>Are you sure you want to delete this media?</p>
 <div>
     <strong>Image URL:</strong> @Model.ImageUrl
