--- a/LKWSpringerApp.Web/Views/Driver/Add.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Add.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Add Driver";
 }
 
-<h2>Add a new driver</h2>
+<h2><u>Add driver</u></h2>
 
 <form asp-action="Add" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
