--- a/LKWSpringerApp.Web/Views/Tour/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@using LKWSpringerApp.Web.ViewModels.Tour
 @model EditTourModel
 
-<h2>Edit Tour</h2>
+<h2><u>Edit tour</u></h2>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
