--- a/LKWSpringerApp.Web/Views/Client/Add.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Add.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add Client";
 }
 
-<h2>Add a new client</h2>
+<h2><u>Add client</u></h2>
 
 <form asp-action="Add" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
