--- a/LKWSpringerApp.Web/Views/Client/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Details.cshtml
@@ -4,13 +4,7 @@
     ViewData["Title"] = "Client Details";
 }
 
-<h2>@Model.Name</h2>
-
-<div class="d-flex justify-content-start mb-3">
-    <a asp-action="Index" class="btn btn-primary mx-1" style="width: 150px;">Back</a>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-success mx-1" style="width: 150px;">Edit</a>
-    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger mx-1" style="width: 150px;" onclick="return confirm('Are you sure you want to delete this client?');">Delete</a>
-</div>
+<h2><u>@Model.Name</u></h2>
 
 <table class="table">
     <tr>
@@ -72,6 +66,14 @@
         {
             <p>No images available for this client.</p>
         }
+    </div>
+</div>
+
+<div class="card-footer text-center">
+    <div class="d-flex justify-content-start mb-3">
+        <a asp-action="Index" class="btn btn-primary mx-1" style="width: 150px;">Back</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-success mx-1" style="width: 150px;">Edit</a>
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger mx-1" style="width: 150px;" onclick="return confirm('Are you sure you want to delete this client?');">Delete</a>
     </div>
 </div>
 
