--- a/LKWSpringerApp.Web/Views/Client/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit Client";
 }
 
-<h2>Edit Client</h2>
+<h2><u>Edit Client</u></h2>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
