--- a/LKWSpringerApp.Web/Views/ClientImage/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/ClientImage/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LKWSpringerApp.Web.ViewModels.ClientImage.EditClientImageModel
 
-<h2>Edit Client Media</h2>
+<h2><u>Edit client media file</u></h2>
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
     <input type="hidden" asp-for="ClientId" />
@@ -24,5 +24,8 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <div class="form-group mt-3">
+        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <a asp-action="Index" class="btn btn-secondary ml-2">Back to List</a>
+    </div>
 </form>
