--- a/LKWSpringerApp.Web/Views/Driver/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Details.cshtml
@@ -2,8 +2,9 @@
 @model DetailsDriverModel
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
-    <h2>Driver Details</h2>
+    <h2><u>Driver details</u></h2>
 </div>
+
 <hr />
 
 <div class="row justify-content-center" style="margin: 0 auto; max-width: 800px;">
