--- a/LKWSpringerApp.Web/Views/Driver/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit Driver";
 }
 
-<h2>Edit Driver</h2>
+<h2><u>Edit driver</u></h2>
 
 <form asp-action="Edit" method="post">
     <div class="form-group">
