--- a/LKWSpringerApp.Web/Views/Tour/Delete.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
-    <h2>@ViewData["Title"]</h2>
+    <h2><u>Delete tour</u></h2>
 </div>
 <hr />
 
