--- a/LKWSpringerApp.Web/Views/Tour/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Details.cshtml
@@ -2,7 +2,7 @@
 @model TourDetailsModel
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
-    <h2>Tour Details</h2>
+    <h2><u>Tour Details</u></h2>
 </div>
 <hr />
 
