--- a/LKWSpringerApp.Web/Views/Client/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LKWSpringerApp.Web.ViewModels.Client.ClientViewModel>
+﻿@model IEnumerable<LKWSpringerApp.Web.ViewModels.Client.AllClientModel>
 
 @{
     ViewData["Title"] = "Clients";
