--- a/LKWSpringerApp.Web/Views/Tour/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using LKWSpringerApp.Web.ViewModels.TourModels
-@model TourDetailsModel
+@model DetailsTourModel
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
     <h2><u>Tour Details</u></h2>
