--- a/LKWSpringerApp.Web/Views/ClientImage/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/ClientImage/Edit.cshtml
@@ -1,15 +1,21 @@
 ﻿@model LKWSpringerApp.Web.ViewModels.ClientImage.EditClientImageModel
 
 <h2><u>Edit client media file</u></h2>
-<form asp-action="Edit" method="post">
+<form asp-action="Edit" method="post" enctype="multipart/form-data">
     <input type="hidden" asp-for="Id" />
     <input type="hidden" asp-for="ClientId" />
 
     <div class="form-group">
-        <label asp-for="ImageUrl"></label>
+        <label>Current Image</label>
         <div>
             <img src="/@Model.ImageUrl" alt="Current Image" style="max-width: 150px;" />
         </div>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="NewImageFile">Upload New Image (Optional)</label>
+        <input asp-for="NewImageFile" class="form-control" type="file" />
+        <span asp-validation-for="NewImageFile" class="text-danger"></span>
     </div>
 
     <div class="form-group">
