--- a/LKWSpringerApp.Web/Views/Client/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LKWSpringerApp.Web.ViewModels.Client.AllClientModel>
+﻿@model LKWSpringerApp.Services.Data.Helpers.PaginatedList<LKWSpringerApp.Web.ViewModels.Client.AllClientModel>
 
 @{
     ViewData["Title"] = "Clients";
@@ -11,7 +11,7 @@
 </div>
 
 <div class="containercontainer-fluid">
-<div class="table-responsive">
+    <div class="table-responsive">
     <table class="table table-striped table-bordered">
         <thead class="table-light">
             <tr>
@@ -41,8 +41,25 @@
             }
         </tbody>
     </table>
+    </div>
 </div>
-</div>
+
+<nav>
+    <ul class="pagination">
+        <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
+            <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)" asp-route-pageSize="@ViewData["PageSize"]">Previous</a>
+        </li>
+        @for (var i = 1; i <= Model.TotalPages; i++)
+        {
+            <li class="page-item @(Model.PageIndex == i ? "active" : "")">
+                <a class="page-link" asp-action="Index" asp-route-pageIndex="@i" asp-route-pageSize="@ViewData["PageSize"]">@i</a>
+            </li>
+        }
+        <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
+            <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex + 1)" asp-route-pageSize="@ViewData["PageSize"]">Next</a>
+        </li>
+    </ul>
+</nav>
 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"></script>
