--- a/LKWSpringerApp.Web/Views/ClientImage/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/ClientImage/Details.cshtml
@@ -18,7 +18,7 @@ else
                 <tr>
                     <th>Image</th>
                     <th>Video</th>
-                    <th>Description</th>
+                    <th style="width: 200px;">Description</th> <!-- Adjust width as needed -->
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -29,7 +29,8 @@ else
                         <td>
                             @if (!string.IsNullOrEmpty(media.ImageUrl))
                             {
-                                <img src="/@media.ImageUrl" alt="@media.Description" class="img-fluid rounded" style="max-width: 100px;" />
+                                <!-- Display larger images -->
+                                <img src="/@media.ImageUrl" alt="@media.Description" class="img-fluid rounded" style="max-width: 300px; height: auto;" />
                             }
                         </td>
                         <td>
@@ -38,10 +39,13 @@ else
                                 <a href="/@media.VideoUrl" target="_blank">View Video</a>
                             }
                         </td>
-                        <td>@media.Description</td>
-                        <td>
-                            <a asp-action="Edit" asp-route-id="@media.Id" class="btn btn-warning">Edit</a>
-                            <a asp-action="Delete" asp-route-id="@media.Id" class="btn btn-danger">Delete</a>
+                        <td style="width: 200px;">@media.Description</td>
+                        <td style="vertical-align: middle;">
+                            <div class="d-flex justify-content-center align-items-center gap-2">
+                                <a asp-action="Edit" asp-route-id="@media.Id" class="btn btn-warning">Edit</a>
+                                <a asp-action="Delete" asp-route-id="@media.Id" class="btn btn-danger">Delete</a>
+                                <a asp-action="Index" class="btn btn-primary">Back</a>
+                            </div>
                         </td>
                     </tr>
                 }
