--- a/LKWSpringerApp.Web/Views/Driver/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Index.cshtml
@@ -1,21 +1,15 @@
-﻿@using LKWSpringerApp.Web.ViewModels.Driver
-@model IEnumerable<AllDriverModel>
+﻿@model LKWSpringerApp.Services.Data.Helpers.PaginatedList<LKWSpringerApp.Web.ViewModels.Driver.AllDriverModel>
 
 @{
     ViewData["Title"] = "All Drivers";
 }
+<h2><u>All Drivers</u></h2>
 
-<div class="container mt-4">
-    <div class="row align-items-center mb-3">
-        <div class="col-md-6">
-            <h2><u>All Drivers</u></h2>
-        </div>
-        <div class="mb-3 text-end">
-            <a asp-action="Add" class="btn btn-success">Add new driver</a>
-        </div>
-    </div>
-
-   <div class="table-responsive">
+<div class="mb-3 text-end">
+    <a asp-action="Add" class="btn btn-success">Add New Driver</a>
+</div>
+    
+<div class="table-responsive">
     <table class="table table-striped table-bordered">
         <thead class="table-light">
             <tr>
@@ -33,7 +27,7 @@
                     <td>@driver.PhoneNumber</td>
                     <td>
                         @(driver.Stammdriver ? "Stammdriver" :
-                          driver.Springerdriver ? "Springerdriver" : "Not Specified")
+                        driver.Springerdriver ? "Springerdriver" : "Not Specified")
                     </td>
                     <td>
                         <div class="d-flex justify-content-center align-items-center gap-2">
@@ -44,8 +38,24 @@
             }
         </tbody>
     </table>
-    </div>
 </div>
+
+<nav>
+    <ul class="pagination">
+        <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
+            <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)" asp-route-pageSize="@ViewData["PageSize"]">Previous</a>
+        </li>
+        @for (var i = 1; i <= Model.TotalPages; i++)
+        {
+            <li class="page-item @(Model.PageIndex == i ? "active" : "")">
+                <a class="page-link" asp-action="Index" asp-route-pageIndex="@i" asp-route-pageSize="@ViewData["PageSize"]">@i</a>
+            </li>
+        }
+        <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
+            <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex + 1)" asp-route-pageSize="@ViewData["PageSize"]">Next</a>
+        </li>
+    </ul>
+</nav>
 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"></script>
