--- a/LKWSpringerApp.Web/Views/Tour/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using LKWSpringerApp.Web.ViewModels.TourModels
-@model IEnumerable<AllTourModel>
+﻿@model LKWSpringerApp.Services.Data.Helpers.PaginatedList<LKWSpringerApp.Web.ViewModels.TourModels.AllTourModel>
 
 @{
     ViewData["Title"] = "All Tours";
@@ -12,7 +11,6 @@
     <a asp-action="Add" class="btn btn-success">Add New Tour</a>
 </div>
 
-<!-- Responsive Table Wrapper -->
 <div class="table-responsive">
     <table class="table table-striped table-bordered">
         <thead class="table-light">
@@ -47,6 +45,23 @@
         </tbody>
     </table>
 </div>
+
+<nav>
+    <ul class="pagination">
+        <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
+            <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)" asp-route-pageSize="@ViewData["PageSize"]">Previous</a>
+        </li>
+        @for (var i = 1; i <= Model.TotalPages; i++)
+        {
+            <li class="page-item @(Model.PageIndex == i ? "active" : "")">
+                <a class="page-link" asp-action="Index" asp-route-pageIndex="@i" asp-route-pageSize="@ViewData["PageSize"]">@i</a>
+            </li>
+        }
+        <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
+            <a class="page-link" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex + 1)" asp-route-pageSize="@ViewData["PageSize"]">Next</a>
+        </li>
+    </ul>
+</nav>
 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/js/bootstrap.bundle.min.js"></script>
