Seeding Client Images and updating the User seeding

--- a/LKWSpringerApp.Web/Views/Driver/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Index.cshtml
@@ -23,7 +23,7 @@
             @foreach (var driver in Model)
             {
                 <tr>
-                    <td>@driver.FirstName @driver.SecondName</td>
+                    <td>@driver.SecondName, @driver.FirstName </td>
                     <td>@driver.PhoneNumber</td>
                     <td>
                         @(driver.Stammdriver ? "Stammdriver" :
