--- a/LKWSpringerApp.Web/Views/ClientImage/Add.cshtml
+++ b/LKWSpringerApp.Web/Views/ClientImage/Add.cshtml
@@ -27,4 +27,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-action="Index" class="btn btn-secondary ml-2">Back to List</a>
 </form>
