--- a/LKWSpringerApp.Web/Views/Home/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Home/Index.cshtml
@@ -2,41 +2,41 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="row">
-    <div class="col-md-3">
-        <div class="list-group">
-            <a asp-controller="Driver" asp-action="Index" class="btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2" style="font-size: 1.1rem;">
-                <i class="fas fa-truck me-2"></i> Drivers
-            </a>
-            <a asp-controller="Tour" asp-action="Index" class="btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2" style="font-size: 1.1rem;">
-                <i class="fas fa-road me-2"></i> Tours
-            </a>
-            <a asp-controller="Client" asp-action="Index" class="btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2" style="font-size: 1.1rem;">
-                <i class="fas fa-user me-2"></i> Clients
-            </a>
-            <a asp-controller="ClientImage" asp-action="Index" class="btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2" style="font-size: 1.1rem;">
-                <i class="fas fa-user me-2"></i> Clients Media
-            </a>
-            <a id="about-us-button" class="btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2" style="font-size: 1.1rem;">
-                <i class="fas fa-info-circle me-2"></i> About Us
-            </a>
+<div class="home-page-wallpaper">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="list-group">
+                <a asp-controller="Driver" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                    <i class="fas fa-truck me-2"></i> Drivers
+                </a>
+                <a asp-controller="Tour" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                    <i class="fas fa-road me-2"></i> Tours
+                </a>
+                <a asp-controller="Client" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                    <i class="fas fa-user me-2"></i> Clients
+                </a>
+                <a asp-controller="ClientImage" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                    <i class="fas fa-user me-2"></i> Clients Media
+                </a>
+                <a id="about-us-button" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                    <i class="fas fa-info-circle me-2"></i> About Us
+                </a>
+            </div>
+
+            <div id="about-us-text" class="mt-3 p-3 bg-light border rounded" style="display: none;">
+                <h4>Welcome to LKWSpringerApp or E.D.D.C!</h4>
+                <span>E - Easy<br>D - Delivery<br>D - Driver<br>C - Coordinator</span>
+                <p>
+                    This app is all about helping drivers make exact, easy, and fast deliveries without any problems.
+                    It ensures a seamless experience for customers and delivery companies alike.
+                </p>
+            </div>
         </div>
 
-        <div id="about-us-text" class="mt-3 p-3 bg-light border rounded" style="display: none;">
-            <p>
-                This app is all about helping drivers make exact, easy, and fast deliveries without any problems.
-                It ensures a seamless experience for customers and delivery companies alike.
-            </p>
-        </div>
-    </div>
-
-    <div class="col-md-9">
-        <div class="eddc-text ms-4">
-            <p class="welcome">Welcome to LKWSpringerApp or E.D.D.C!</p>
-            <p><strong>E</strong> - Easy</p>
-            <p><strong>D</strong> - Delivery</p>
-            <p><strong>D</strong> - Driver</p>
-            <p><strong>C</strong> - Coordinator</p>
+        <div class="col-md-9">
+            <div class="eddc-text ms-4">
+                <p class="welcome">Welcome to LKWSpringerApp or E.D.D.C!</p>
+            </div>
         </div>
     </div>
 </div>
