Updating ErrorMessages,SuccessMessages and fixing ClientImage Video code

--- a/LKWSpringerApp.Web/Views/Client/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Details.cshtml
@@ -6,6 +6,26 @@
 
 <h2><u>@Model.Name</u></h2>
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
+
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger">
+        @Html.ValidationSummary(false)
+    </div>
+}
+
 <table class="table">
     <tr>
         <th>Name</th>
