--- a/LKWSpringerApp.Web/Views/Driver/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Edit.cshtml
@@ -7,6 +7,25 @@
 
 <h2><u>Edit driver</u></h2>
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger">
+        @Html.ValidationSummary(false)
+    </div>
+}
+
 <form asp-action="Edit" method="post">
     <div class="form-group">
         <label asp-for="FirstName" class="control-label">First name</label>
