--- a/LKWSpringerApp.Web/Views/Driver/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Index.cshtml
@@ -6,6 +6,19 @@
 <div class="driver-index-wallpaper">
     <h2><u>All Drivers</u></h2>
 
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success">
+            @TempData["SuccessMessage"]
+        </div>
+    }
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @TempData["ErrorMessage"]
+        </div>
+    }
+
     <div class="mb-3 text-end">
         <a asp-action="Add" class="btn btn-success">Add New Driver</a>
     </div>
