--- a/LKWSpringerApp.Web/Views/Tour/Edit.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Edit.cshtml
@@ -3,6 +3,25 @@
 
 <h2><u>Edit tour</u></h2>
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger">
+        @Html.ValidationSummary(false)
+    </div>
+}
+
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
 
