--- a/LKWSpringerApp.Web/Views/Client/Add.cshtml
+++ b/LKWSpringerApp.Web/Views/Client/Add.cshtml
@@ -6,6 +6,20 @@
 
 <h2><u>Add client</u></h2>
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+
+@if (ViewData.ModelState.ErrorCount > 0)
+{
+    <div class="alert alert-danger">
+        @Html.ValidationSummary(false)
+    </div>
+}
+
 <form asp-action="Add" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
