--- a/LKWSpringerApp.Web/Views/ClientImage/Delete.cshtml
+++ b/LKWSpringerApp.Web/Views/ClientImage/Delete.cshtml
@@ -1,6 +1,20 @@
 ﻿@model LKWSpringerApp.Web.ViewModels.ClientImage.DeleteClientImageModel
 
 <h2><u>Delete client media file</u></h2>
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
+
 <p>Are you sure you want to delete this media?</p>
 <div>
     <strong>Image URL:</strong> @Model.ImageUrl
