--- a/LKWSpringerApp.Web/Views/Driver/Delete.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Delete.cshtml
@@ -5,6 +5,19 @@
     ViewData["Title"] = "Delete Driver";
 }
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
+
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
     <h2><u>Delete driver</u></h2>
 </div>
