--- a/LKWSpringerApp.Web/Views/Driver/Details.cshtml
+++ b/LKWSpringerApp.Web/Views/Driver/Details.cshtml
@@ -3,8 +3,21 @@
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
     <h2><u>Driver details</u></h2>
-</div>
+    
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success">
+            @TempData["SuccessMessage"]
+        </div>
+    }
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @TempData["ErrorMessage"]
+        </div>
+    }
 
+</div>
 <hr />
 
 <div class="row justify-content-center" style="margin: 0 auto; max-width: 800px;">
