--- a/LKWSpringerApp.Web/Views/Tour/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Tour/Index.cshtml
@@ -7,6 +7,19 @@
 <div class="tour-index-wallpaper">
     <h2><u>All Tours</u></h2>
 
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success">
+            @TempData["SuccessMessage"]
+        </div>
+    }
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @TempData["ErrorMessage"]
+        </div>
+    }
+
     <div class="mb-3 text-end">
         <a asp-action="Add" class="btn btn-success">Add New Tour</a>
     </div>
