--- a/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
+++ b/LKWSpringerApp.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         <a class="nav-link" asp-controller="Client" asp-action="Index">Clients</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="ClientImage" asp-action="Index">Media Files</a>
+                        <a class="nav-link" asp-controller="Media" asp-action="Index">Media Files</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
             <a asp-controller="Driver" asp-action="Index" class="btn btn-primary mx-2">Drivers</a>
             <a asp-controller="Tour" asp-action="Index" class="btn btn-primary mx-2">Tours</a>
             <a asp-controller="Client" asp-action="Index" class="btn btn-primary mx-2">Clients</a>
-            <a asp-controller="ClientImage" asp-action="Index" class="btn btn-primary mx-2">Media Files</a>
+            <a asp-controller="Media" asp-action="Index" class="btn btn-primary mx-2">Media Files</a>
         </div>
     <div class="container">&copy; 2024 - LKWSpringerApp - <a asp-controller="Home" asp-action="Privacy">Privacy</a></div>
     </footer>
