--- a/LKWSpringerApp.Web/Views/Home/Index.cshtml
+++ b/LKWSpringerApp.Web/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                 <a asp-controller="Client" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
                     <i class="fas fa-user me-2"></i> Clients
                 </a>
-                <a asp-controller="ClientImage" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
+                <a asp-controller="Media" asp-action="Index" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
                     <i class="fas fa-user me-2"></i> Clients Media
                 </a>
                 <a id="about-us-button" class="custom-button btn btn-outline-secondary list-group-item-action d-flex justify-content-center align-items-center my-2 py-2">
